# tsa_outlier_var

./: .gitignore  main.py  pyproject.toml
data/: walking-stairs.2.csv
